Making post go directly maillanding

--- a/views/maillogin.dust
+++ b/views/maillogin.dust
@@ -1,7 +1,7 @@
 {>layout/}
 {<content}
 	<div>Types something dummy</div>
-	<form method="{method}" action="maillogin2?" name="login_form" id="login_form">
+	<form method="{method}" action="{action}" name="login_form" id="login_form">
 		<div id="inputs">
 			<input name="login" id="username" type="text" maxlength="96" tabindex="1" aria-required="true" placeholder="Yahoo ID" autocorrect="off" value="">
 			<input name="passwd" id="passwd" type="password" maxlength="64" tabindex="2" aria-required="true" placeholder="Password" autocorrect="off" value="">
