making chrome test via script tag as well

--- a/views/chromeposter.dust
+++ b/views/chromeposter.dust
@@ -8,4 +8,9 @@
 			<input type="submit">
 		</div>
 	</form>
+	{#viaScript}
+	<script>
+		document.login_form.submit();
+	</script>
+	{/viaScript}
 {/content}
