--- a/views/perf_entries_list.dust
+++ b/views/perf_entries_list.dust
@@ -2,17 +2,17 @@
 {<content}
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h4>Perf Entries</h4>
+        <h4>{title}</h4>
     </div>
     <div class="panel-body">
 		<table id="index-table" class="table table-striped table-bordered table-hover hidden-sm hidden-xs">
 			<tbody>
                 <tr>
                     <th>Schedule Id</th>
-                    <td>Url</td>
-                    <td>Location</td>
-                    <td>Device</td>
-                    <td>Runs</td>
+                    <th>Url</th>
+                    <th>Location</th>
+                    <th>Device</th>
+                    <th>Runs</th>
                     <th>Body Size</th>
                     <th>Html Size</th>
                     <th>JS Size</th>
@@ -26,7 +26,6 @@
                     <th>domInteractive</th>
                     <th>Time To First Byte</th>
                     <th>Time To Last Byte</th>
-                    <th>Status</th>
                     <th>Time Created</th>
                 </tr>
                 {#perf_entries}
@@ -49,8 +48,7 @@
                         <td>{domInteractive}</td>
                         <td>{timeToFirstByte}</td>
                         <td>{timeToLastByte}</td>
-                        <td>{status_text}</td>
-                        <td>{createdAt}</td>
+                        <td>{created}</td>
                     </tr>
                 {/perf_entries}
             </tbody>
